--- a/example/example.html
+++ b/example/example.html
@@ -15,16 +15,52 @@
 </head>
 
 <body>
-  <h1>This text has a shadow on it.</h1>
-  <h2>This text has a two shadows on it.</h2>
-  <div class="box-shadow">
-    This box has a drop shadow on it.
+ <!--  <h1>This text has a shadow on it.</h1>
+ <h2>This text has a two shadows on it.</h2>
+ <div class="box-shadow">
+   This box has a drop shadow on it.
+ </div>
+ <div class="inner-box-shadow">
+   This box has an inner shadow on it.
+ </div>
+ <div class="multiple-box-shadow">
+   This box has a drop shadow <em>and</em> an inner shadow on it.
+ </div> -->
+  <h1>Drop Shadow to box-shadow()</h1>
+  <h2 class="title">Cardinal Directions</h2>
+  <div class="grid--4">
+    <div class="grid-item">
+      <div class="shadow-test--0">0&deg;</div>
+    </div>
+    <div class="grid-item">
+      <div class="shadow-test--90">90&deg;</div>
+    </div>
+    <div class="grid-item">
+      <div class="shadow-test--180">180&deg;</div>
+    </div>
+    <div class="grid-item">
+      <div class="shadow-test---90">-90&deg;</div>
+    </div>
   </div>
-  <div class="inner-box-shadow">
-    This box has an inner shadow on it.
+  <h2 class="title">Diagonal Directions</h2>
+  <div class="grid--4">
+    <div class="grid-item">
+      <div class="shadow-test--45">45&deg;</div>
+    </div>
+    <div class="grid-item">
+      <div class="shadow-test--135">135&deg;</div>
+    </div>
+    <div class="grid-item">
+      <div class="shadow-test---135">-135&deg;</div>
+    </div>
+    <div class="grid-item">
+      <div class="shadow-test---45">-45&deg;</div>
+    </div>
   </div>
-  <div class="multiple-box-shadow">
-    This box has a drop shadow <em>and</em> an inner shadow on it.
+  <h1>Drop Shadow to text-shadow()</h1>
+  <div class="text-shadow-container">
+    <p>120&deg;</p>
+    <p class="text-shadow--120">But Wait There's More!</p>
   </div>
 </body>
 </html>
